# b64

./: Cargo.toml  README.md  README.mdi.md  clippy.sh  dist.sh  init.sh  out.txt
src/: lib.rs
tests/: main.rs
