[package]
name = "b64"
version = "0.0.2"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxai-art/b64"
repository = "https://github.com/xxai-art/b64"
description = "urlsafe base64 encode / decode"

[dependencies]
base64 = "0.21.2"
intbin = { version = "0.0.5", optional = true }

[features]
intbin = ["dep:intbin"]
default = ["intbin"]

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
# strip = true
